# C_408_1

./: CMakeLists.txt  README.md
408_tips/: Duiqi.c
chapter_01/: C_help_01  demo_01_int.c  demo_02_float.c  demo_03_char.c  demo_04_mix_type.c  demo_05_printf.c  demo_06_decimal_conversion.c  demo_07_scanf.c  demo_08_scanf_more.c  demo_09_cout_cin.cpp  demo_10_string.cpp  demo_11_boolean.cpp  demo_12_double.cpp  demo_13_auto.cpp
chapter_02/: C_help_02  demo_01_arithmetic.c  demo_02_relation.c  demo_03_logic.c  demo_04_shortcircuit.c  demo_05_assign.c  demo_06_sizeof.c  demo_07_math.cpp
chapter_03/: demo_01_if.c  demo_02_while.c  demo_03_for.c  demo_04_continue.c  demo_05_break.c  demo_06_switch.cpp  demo_07_for_each.cpp  表达式计算过程
chapter_04/: demo_01_array.c  demo_02_AccessOutOfBound.c  demo_03_transmit.c  demo_04_CharArray.c  demo_05_ScanfString.c  demo_06_GetsPuts.c  demo_07_Str.c  demo_08_string_array.cpp  demo_09_sizeof.cpp  demo_10_Multi_dimensional_array.cpp  数组注意事项
chapter_05/: demo_01_pointer.c  demo_02_change.c  demo_03_ChangePointer.c  demo_04_PointerCal.c  demo_05_PointerArray.c  demo_06_PointerMalloc.c  demo_07_HeapStack.c  demo_08_references.cpp  demo_09_new_delete.cpp
chapter_06/: demo_04_overloading.cpp  demo_05_lambda.cpp
chapter_06/demo_01_function/: c6_d1_func.c  c6_d1_func.h  c6_d1_main.c
chapter_06/demo_02_recursion/: c6_d2_main.c
chapter_06/demo_03_GlobalVariable/: c6_d3_GlobalVariable.c
chapter_07/: demo_01_struct.c  demo_02_StructSize.c  demo_03_StructPointer.c  demo_04_typedef.c  demo_05_enum.cpp
chapter_07/demo_04_queto/: CMakeLists.txt  bool.cpp  main.cpp  modify_pointer.cpp
chapter_08/: demo_01_classes_objects.cpp  demo_02_methods.cpp  demo_03_Constructors.cpp  demo_04_Specifiers.cpp  demo_05_Encapsulation.cpp  demo_06_friend.cpp  demo_07_Inheritance.cpp  demo_08_polymorphism.cpp  demo_09_templates.cpp  demo_11_date.cpp
chapter_08/demo_10_files/: demo_10_files.cpp
chapter_09/: demo_01_error.cpp  demo_02_input.cpp
chapter_10/: demo_01_vector.cpp  demo_02_list.cpp  demo_03_stack.cpp  demo_04_queue.cpp  demo_05_deque.cpp  demo_06_set.cpp  demo_07_map.cpp  demo_08_iterator.cpp  demo_09_algorithm.cpp
chapter_11/: demo_01_namespaces.cpp
