cmake_minimum_required(VERSION 3.29)
project(C_408_1 C)

set(CMAKE_C_STANDARD 11)

add_executable(C_408_1 main.c)

add_executable(demo_01_int chapter_01/demo_01_int.c)
add_executable(demo_02_float chapter_01/demo_02_float.c)
add_executable(demo_03_char chapter_01/demo_03_char.c)
add_executable(demo_04_mixprintf chapter_01/demo_04_mix_type.c)
add_executable(demo_05_printf chapter_01/demo_05_printf.c)
add_executable(demo_06_decimal_conversion chapter_01/demo_06_decimal_conversion.c)
add_executable(demo_07_scanf chapter_01/demo_07_scanf.c)
add_executable(demo_08_scanf_more chapter_01/demo_08_scanf_more.c)
add_executable(Duiqi 408_tips/Duiqi.c)

add_executable(demo_01_arithmetic chapter_02/demo_01_arithmetic.c)
add_executable(demo_02_relation chapter_02/demo_02_relation.c)
add_executable(demo_03_logic chapter_02/demo_03_logic.c)
add_executable(demo_04_shortcircuit chapter_02/demo_04_shortcircuit.c)
add_executable(demo_05_assign chapter_02/demo_05_assign.c)
add_executable(demo_06_sizeof chapter_02/demo_06_sizeof.c)
add_executable(demo_01_if chapter_03/demo_01_if.c)
add_executable(demo_02_while chapter_03/demo_02_while.c)
add_executable(demo_03_for chapter_03/demo_03_for.c)
add_executable(demo_04_continue chapter_03/demo_04_continue.c)
add_executable(demo_05_break chapter_03/demo_05_break.c)
add_executable(demo_01_array chapter_04/demo_01_array.c)
add_executable(demo_02_AccessOutOfBound chapter_04/demo_02_AccessOutOfBound.c)
add_executable(demo_03_transmit chapter_04/demo_03_transmit.c)
add_executable(demo_04_CharArray chapter_04/demo_04_CharArray.c)
add_executable(demo_05_ScanfString chapter_04/demo_05_ScanfString.c)
add_executable(demo_06_GetsPuts chapter_04/demo_06_GetsPuts.c)
add_executable(demo_07_Str chapter_04/demo_07_Str.c)
add_executable(demo_01_pointer chapter_05/demo_01_pointer.c)
add_executable(demo_02_change chapter_05/demo_02_change.c)
add_executable(demo_03_ChangePointer chapter_05/demo_03_ChangePointer.c)
add_executable(demo_04_PointerCal chapter_05/demo_04_PointerCal.c)
add_executable(demo_05_PointerArray chapter_05/demo_05_PointerArray.c)
add_executable(demo_06_PointerMalloc chapter_05/demo_06_PointerMalloc.c)
add_executable(demo_07_HeapStack chapter_05/demo_07_HeapStack.c)
add_executable(c6_d1_main chapter_06/demo_01_function/c6_d1_main.c
        chapter_06/demo_01_function/c6_d1_func.c
        chapter_06/demo_01_function/c6_d1_func.h)
add_executable(c6_d2_main chapter_06/demo_02_recursion/c6_d2_main.c)
add_executable(c6_d3_GlobalVariable chapter_06/demo_03_GlobalVariable/c6_d3_GlobalVariable.c)
add_executable(demo_01_struct chapter_07/demo_01_struct.c)
add_executable(demo_02_StructSize chapter_07/demo_02_StructSize.c)
add_executable(demo_03_StructPointer chapter_07/demo_03_StructPointer.c)
add_executable(demo_04_typedef chapter_07/demo_04_typedef.c)
